# eye-bench

./: .gitignore  main.py  pyproject.toml
data/processed/: baseline_component_analysis.json  baseline_generator_ranking.json  baseline_stats.json  eyes.json  iid_baseline_distance.json  markov2_diagnostics.json  noita_corpus_stats.json
data/raw/: credit.md  order.md
data/raw/eyes/: east1.lua  east2.lua  east3.lua  east4.lua  east5.lua  west1.lua  west2.lua  west3.lua  west4.lua
docs/: step_2_perm_state_v3_2026_03_14.md  step_5_markov1_bar_2026_03_14.md
docs/devlog_2026_03_14/: report_2026_03_14.md  step_1_benchmark_refinement_2026_03_14.md  step_3_classical_baselines_2026_03_14.md  step_4_component_analysis_2026_03_14.md
docs/devlog_2026_03_15/: report.md
scripts/: compare_iid_baseline.py  compute_baseline_stats.py  diagnose_markov2.py  parse_raw_corpus.py  rank_baselines.py
src/eye_bench/ciphers/: __init__.py  classical.py  markov1.py  markov2.py  perm_state.py  trivial.py
src/eye_bench/corpus/: __init__.py  encode.py  loader.py  schema.py  validate.py
src/eye_bench/invariants/: __init__.py  _common.py  adjacency.py  benchmark.py  counts.py  dependence.py  entropy.py  isomorphs.py  lag.py  models.py  sections.py
src/eye_bench/scoring/: __init__.py  component_analysis.py  feature_distance.py  generator_benchmark.py
tests/: test_component_analysis.py  test_compute_corpus_stats_smoke.py  test_corpus_stats_json.py  test_feature_distance.py  test_generator_extensions.py
